--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   </style>
 </head>
 <body>
-  <h1>🚑 PranaPath</h1>
+  <h1>PranaPath</h1>
   <select id="roleSelect">
     <option value="user">User</option>
     <option value="driver">Driver</option>
